# Music-dlp

./: .env  README.md  config.toml  fetchSong.sh  main.py  pyproject.toml  run_cli.sh  run_gui.sh  run_rust_tui.sh  run_simple_tui.sh  run_tui.sh
src/: __init__.py
src/metadata_manager/: __init__.py  cli.py  curses_tui.py  gui.py  simple_tui.py  tui.py
src/metadata_manager/core/: __init__.py  artwork_finder.py  display.py  file_scanner.py  metadata_manager.py  scanner.py  utils.py  web.py
src/metadata_manager/core/providers/: __init__.py  deezer_provider.py  itunes_provider.py  musicbrainz_provider.py  provider_base.py  spotify_provider.py  youtube_provider.py
src/metadata_manager/styles/: tui.css
src/rust/metadata_core/src/: lib.rs
src/tui/: Cargo.toml
src/tui/src/: app.rs  main.rs  metadata.rs  ui.rs
