[tool.poetry]
name = "music-metadata-manager"
version = "0.1.0"
description = "A flexible music metadata management system"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "metadata_manager", from = "src" }
]

[tool.poetry.scripts]
metadata-manager = "metadata_manager.cli:main"
metadata-manager-gui = "metadata_manager.gui:main"
metadata-manager-tui = "metadata_manager.tui:main"

[tool.poetry.dependencies]
python = ">3.8,<4.0"
mutagen = "^1.45.1"
musicbrainzngs = "^0.7.1"
rich = "^13.9.4"
requests = "^2.31.0"
Pillow = "^10.0.0"  # Para el GUI y manejo de imágenes
spotipy = "^2.23.0"
ytmusicapi = "^1.3.0"
textual = "^0.52.1"  # Para la interfaz TUI

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "^22.0.0"
flake8 = "^3.9.2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-dlp"
version = "0.1.0"
description = "Music metadata manager and downloader"
requires-python = ">=3.8"
dependencies = [
    "rich",
    "mutagen",
    "spotipy",
    "ytmusicapi",
    "musicbrainzngs",
    "requests",
    "Pillow",
    "textual"
]

[project.optional-dependencies]
gui = [
    "Pillow",
    "tk"  # Asegurarse de que tkinter está disponible
]
tui = [
    "textual>=0.52.1"
]
enhanced = [
    "python-Levenshtein-wheels",
    "fuzzywuzzy"
]

[tool.pylance]
extraPaths = ["src"]
